<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Tab1Fragment"
    android:visibility="visible">

    <TextView
        android:id="@+id/textTab1"
        android:layout_width="349dp"
        android:layout_height="178dp"
        android:layout_above="@+id/btnTEST1a"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="384dp"
        android:text="@string/welcome"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnTEST1a"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_purple"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Login_Signup"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:radius="4dp"

        app:backgroundTint="@android:color/holo_purple" />

    <Button
        android:id="@+id/findNonProfits"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginBottom="215dp"
        android:radius="4dp"
        android:background="@android:color/holo_purple"
        android:text="@string/googlemaps"
        android:textColor="@android:color/white"

        android:textSize="20dp"

        app:backgroundTint="@android:color/holo_purple" />

    <Button
        android:id="@+id/findTitleIX"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="215dp"
        android:background="@android:color/holo_purple"
        android:text="@string/findtitleixhelp"
        android:textColor="@android:color/white"
        android:radius="4dp"

        android:textSize="20dp"

        app:backgroundTint="@android:color/holo_purple" />


    <Button
        android:id="@+id/findCouseling"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_purple"
        android:text="@string/talktosomeone"
        android:textColor="@android:color/white"
        android:radius="4dp"

        android:textSize="20dp"

        app:backgroundTint="@android:color/holo_purple" />


</RelativeLayout>