<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab4Fragment">

    <TextView
        android:id="@+id/textTab4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="464dp"
        android:text="@string/results"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnTEST4a"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_purple"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:radius="4dp"
        android:text="@string/makereport"

        app:backgroundTint="@android:color/holo_purple" />

    <Button
        android:id="@+id/btnTEST4b"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginBottom="215dp"
        android:radius="4dp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white"

        android:textSize="20dp"
        android:text="@string/makeanonreport"

        app:backgroundTint="@android:color/holo_purple" />

    <Button
        android:id="@+id/btnTEST4c"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="215dp"
        android:background="@android:color/holo_purple"
        android:text="@string/googlemaps"
        android:textColor="@android:color/white"
        android:radius="4dp"

        android:textSize="20dp"

        app:backgroundTint="@android:color/holo_purple" />


    <Button
        android:id="@+id/findCouseling"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="68dp"
        android:background="@android:color/holo_purple"
        android:text="@string/talktosomeone"
        android:textColor="@android:color/white"
        android:radius="4dp"

        android:textSize="20dp"

        app:backgroundTint="@android:color/holo_purple" />





</RelativeLayout>

    <!--
    <EditText
    android:id="@+id/editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="91dp"
    android:layout_marginLeft="91dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="107dp"
    android:layout_marginRight="107dp"
    android:layout_marginBottom="401dp"
    android:ems="10"
    android:inputType="textMultiLine"
    android:text="@string/FindHelp" />
    -->